tests/ui/assumptions_on_binders/alias_outlives.stderr
error: unsatisfied lifetime constraint from -Zassumptions-on-binders :3
  --> $DIR/alias_outlives.rs:39:1
   |
LL | const REGIONCK_ENV_FAIL<'a, T: AliasHaver>: ReqTrait<T::Assoc> = todo!()
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: meoow :c

error: aborting due to 1 previous error

